ajout colonne depuis les dicos

--- a/Climb_Scrapping.ipynb
+++ b/Climb_Scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import json\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from json import loads"
    ]
   },
   {
@@ -20,157 +21,6 @@
    "outputs": [],
    "source": [
     "tqdm.pandas()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Nettoyage du DF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Open du fichier JSON\n",
-    "with open('spots_grimpe.json', 'r') as file:\n",
-    "    data = json.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# JSON TO DF\n",
-    "df = pd.DataFrame(data['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Suppression des colonnes\n",
-    "df = df.drop(columns= [\"ref_topo\", \"equipement\", \"topo_num\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Supression du tiret situé à la fin\n",
-    "def sup_tiret(row):\n",
-    "    return row.rstrip(\"-\")\n",
-    "\n",
-    "\n",
-    "df[\"type_escalade\"] = df[\"type_escalade\"].apply(sup_tiret)\n",
-    "df[\"exposition\"] = df[\"exposition\"].apply(sup_tiret)\n",
-    "df[\"public\"] = df[\"public\"].apply(sup_tiret)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Création de liste à la place d'une chaîne de caractéres\n",
-    "def transfo_liste(chaine:str)-> list:\n",
-    "    liste_genres = []\n",
-    "    for genre in chaine.split(\"-\"):\n",
-    "        liste_genres.append(genre.strip())\n",
-    "    return liste_genres\n",
-    "\n",
-    "df[\"type_escalade\"] = df[\"type_escalade\"].apply(transfo_liste)\n",
-    "df[\"exposition\"] = df[\"exposition\"].apply(transfo_liste)\n",
-    "df[\"public\"] = df[\"public\"].apply(transfo_liste)\n",
-    "df[\"saison\"] = df[\"saison\"].apply(transfo_liste)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remplacer \"hautniveau\" par \"haut niveau\" dans les listes\n",
-    "df['public'] = df['public'].apply(lambda lst: ['haut niveau' if x == 'hautniveau' else x for x in lst])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dictionnaire de mappage\n",
-    "mapping_orientation = {\n",
-    "    \"S\": \"Sud\",\n",
-    "    \"N\": \"Nord\",\n",
-    "    \"W\": \"Ouest\",\n",
-    "    \"E\": \"Est\",\n",
-    "    \"SW\": \"Sud-Ouest\",\n",
-    "    \"SE\": \"Sud-Est\",\n",
-    "    \"NW\": \"Nord-Ouest\",\n",
-    "    \"NE\": \"Nord-Est\"\n",
-    "}\n",
-    "\n",
-    "# Appliquer le mappage aux listes dans la colonne \"exposition\"\n",
-    "df[\"exposition\"] = df[\"exposition\"].apply(lambda lst: [mapping_orientation.get(el, el) for el in lst])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dictionnaire de mappage\n",
-    "mapping_mois = {\n",
-    "    \"1\": \"Janvier\",\n",
-    "    \"2\": \"Février\",\n",
-    "    \"3\": \"Mars\",\n",
-    "    \"4\": \"Avril\",\n",
-    "    \"5\": \"Mai\",\n",
-    "    \"6\": \"Juin\",\n",
-    "    \"7\": \"Juillet\",\n",
-    "    \"8\": \"Août\",\n",
-    "    \"9\": \"Septembre\",\n",
-    "    \"10\": \"Octobre\",\n",
-    "    \"11\": \"Novembre\",\n",
-    "    \"12\": \"Decembre\"\n",
-    "\n",
-    "}\n",
-    "\n",
-    "# Appliquer le mappage aux listes dans la colonne \"saison\"\n",
-    "df[\"saison\"] = df[\"saison\"].apply(lambda lst: [mapping_mois.get(el, el) for el in lst])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/fk/s9b7316s21b6krxxntv4pzzm0000gn/T/ipykernel_1485/3093565319.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
-      "  df['url'] = df['nom'].str.replace('(', '').str.replace(')', '').str.replace(' - ', '-').str.replace(' ', '-')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Suppression des () et des - puis remplacer les espaces par des tirets pour l'url\n",
-    "df['url'] = df['nom'].str.replace('(', '').str.replace(')', '').str.replace(' - ', '-').str.replace(' ', '-')"
    ]
   },
   {
@@ -285,24 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export CSV\n",
-    "df.to_csv(\"spots_grimpe.csv\", index=False)\n"
+    "df.to_csv(\"spots_grimpe.csv\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyse"
+    "## Nettoyage et normalisation des données"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,41 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "1       {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "2       {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "3       {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "4       {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "                              ...                        \n",
-       "3650    {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "3651    {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "3652    {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "3653    {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "3654    {'1a': 0, '1b': 0, '1c': 0, '2a': 0, '2b': 0, ...\n",
-       "Name: levels, Length: 3108, dtype: object"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"levels\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Suppression des des lignes qui ont des valeurs nuls dans les colonnes \"latitude\" ou \"longitude\"\n",
     "df = df.dropna(subset=[\"latitude\"])\n",
     "df = df.dropna(subset=[\"longitude\"])"
    ]
@@ -357,7 +177,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Suppression des lignes qui n'ont pas de nom\n",
     "df = df[df[\"name\"] != \"Nom non disponible\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonction pour extraire les dictionnaires dans la colonne \"levels\" et créer de nouvelles colonnes avec les clés / valeurs des dictionnaires\n",
+    "def dic_levels(row):\n",
+    "    dico = loads(row[\"levels\"].replace(\"'\",'\"'))\n",
+    "    for key, item in dico.items():\n",
+    "        row[key] = item\n",
+    "    return row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply de la fonction ci-dessus\n",
+    "df = df.apply(dic_levels,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fonction pour extraire les dictionnaires dans la colonne \"climbing_types\" et créer de nouvelles colonnes avec les clés / valeurs des dictionnaires\n",
+    "def dic_climbing_types(row):\n",
+    "    dico = loads(row[\"climbing_types\"].replace(\"'\",'\"'))\n",
+    "    for key, item in dico.items():\n",
+    "        row[key] = item\n",
+    "    return row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply de la fonction ci-dessus\n",
+    "df = df.apply(dic_climbing_types,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Suppression des colonnes \"Climb_Scrapping\" et \"levels\"\n",
+    "df = df.drop(columns=[\"climbing_types\", \"levels\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ajout d'une photo en cas de valeur nul\n",
+    "df[\"photo\"] = df[\"photo\"].fillna(\"https://i.imghippo.com/files/iRIz5028stI.webp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export CSV\n",
+    "df.to_csv(\"spots_grimpe.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['route_count', 'name', 'north', 'north_east', 'east', 'south_east',\n",
+       "       'south', 'south_west', 'west', 'north_west', 'summer', 'autumn',\n",
+       "       'winter', 'spring', 'latitude', 'longitude', 'region', 'rocks', 'photo',\n",
+       "       '1a', '1b', '1c', '2a', '2b', '2c', '3a', '3b', '3c', '4a', '4b', '4c',\n",
+       "       '5a', '5b', '5c', '6a', '6b', '6c', '7a', '7b', '7c', '8a', '8b', '8c',\n",
+       "       '9a', '9b', '9c', 'sport_climbing', 'bouldering', 'multi_pitch',\n",
+       "       'trad_climbing', 'aid_climbing', 'deep_water', 'via_ferrata'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
